  - Quicktime support now works without Quicktime.
  - Reconciliation with ID3v2.
  - "Blessed" 64-bits support (we already had it in exempi).
  - Slight change in the way XMP are written for MWG compliance.
  - Fixed a serious bug with RIFF.
  - Change in the way local text encoding is dealt with.
- Update unit tests.
  - Refactor the fixtures.
- New: API xmp_files_get_format_info().

2.1.1 - 2009/06/30

New features:

- Added shave to the build system for sane output. (build only)

Bug fixes:

- Bug #16030: if the property is an array or struct allow "" to be passed
  as a value.
- Bug #19312: source/XMPFiles/FileHandlers/P2_Handler.cpp was using 
  an improper string comparison. (made rpmlint unhappy).
- Bug #20554: Missing file on MacOS X.
- Bug #20554: Detect ldflags properly.
- Bug #20622: Catch unhandled exceptions in xmp_files_can_put_xmp().
- Bug #21934: Mismatched new [] / delete.
- Bug #22554: Fix a SIGFPE encountered on some invalid files. (Bug GNOME #586720)

2.1.0

- Upgrade XMPCore to Adobe XMP 4.4.2
  - Handlers for additional file formats, including ASF (WMA, WMV), FLV; 
    MPEG4; SWF; folder-based video formats AVCHD, P2, SonyHDV, and XDCAM; UCF
  - Additional schemas to support document histories, composed documents, 
    and temporal metadata
- New: NS_PDF namespace for PDF.
- New: API xmp_prefix_namespace_uri() and xmp_namespace_prefix(). Bug #14962.
- Bug: make sure boost >1.35 does not fail test with system().
- Bug: unit test now use boost/test/minimal.hpp to work with more boost
  install. (known boost.test bug)
- Bug: fix a typo in a CHECK_PTR call causing warnings on gcc < 4.
- Bug: no longer define UNIX_ENV in exempi.cpp and let CPPFLAGS do it.
- Bug #16139: the list of exported symbols was too large.
- Bug #18635: fix crasher.

2.0.2

- Bug #16598: address the lack of TLS for some platforms.

2.0.1

- Bug #14612: no stdbool.h for Sun compilers.
- Bug #14613: check for iconv() const-ness.
- Make the error checking more robust.