@@ -57,6 +57,8 @@ int test_main(int argc, char *argv[])
 
 	BOOST_CHECK(xmp_init());
 
+
+	BOOST_CHECK(xmp_files_check_file_format(g_testfile.c_str()) == XMP_FT_JPEG);
 	XmpFilePtr f = xmp_files_open_new(g_testfile.c_str(), XMP_OPEN_READ);
 
 	BOOST_CHECK(f != NULL);
@@ -71,6 +73,8 @@ int test_main(int argc, char *argv[])
 
 	BOOST_CHECK(copy_file(g_testfile, "test.jpg"));
 	BOOST_CHECK(chmod("test.jpg", S_IRUSR|S_IWUSR) == 0);
+
+	BOOST_CHECK(xmp_files_check_file_format("test.jpg") == XMP_FT_JPEG);
 	
 	f = xmp_files_open_new("test.jpg", XMP_OPEN_FORUPDATE);
 
